<resources>
    <string name="app_name">BikeshareProject</string>
    <string name="title_activity_bike_map">Map</string>
    <string name="start_ride">START RIDE</string>
    <string name="end_ride">END RIDE</string>
    <string name="address">Address:</string>
    <string name="distance">Distance:</string>
    <string name="start_text">Started:</string>
    <string name="end_text">Ended:</string>
    <string name="rider">Rider:</string>
    <string name="refill_button">Refill</string>
    <string name="user_balance">Balance:</string>
    <string name="add_bike">Add Bike</string>
    <string name="search_bike">Find Bike</string>
    <string name="bike_type_header">Bike type:</string>
    <string name="bike_price_header">Bike price (/h):</string>
</resources>
